# Uni-Bonn-Cpp2018

assignment1/src/: main  main.cpp  test
assignment1/task_1/: commands.sh
assignment2/igg_image/data/: new.ascii.pgm
assignment2/igg_image/src/: CMakeLists.txt
assignment2/igg_image/src/igg_image/: CMakeLists.txt  image.C  image.H  main.cpp
assignment2/igg_image/tests/: CMakeLists.txt
assignment3/igg_image/: CMakeLists.txt
assignment3/igg_image/src/: CMakeLists.txt  main.cpp
assignment3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h
assignment3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  dummy_strategy.cpp  dummy_strategy.h  png_strategy.cpp  png_strategy.h  ppm_strategy.cpp  ppm_strategy.h
assignment4/digit_counter/: CMakeLists.txt  stack_limit  stack_limit.cpp
assignment4/digit_counter/src/: CMakeLists.txt  digit_counting  digit_counting.cpp
lec1/: main.cpp
lec2/: lec0.cpp  lec2.c  lec2.h  lec2Main  lec2_func.cpp  lec2_main.cpp  main  main.cpp
lec3/: main  main.cpp  obj.h
lec4/: geometry.h  main  main.cpp  value.h  vehicle.h
lec5/: main  main.cpp  rectangle.h
lec6/: main  main.cpp  point.h
lec7/: main  main.cpp
lec8/: a.out  enums.h  main  main.cpp  usestd.h
lec9/: main  main.cpp  template.h  template.hpp
